--- a/style.css
+++ b/style.css
@@ -166,7 +166,6 @@ ul{
     
 }
 .icons{
-    gap: 20px;
     display: flex;
 }
 .search{
@@ -208,6 +207,7 @@ ul{
     height: 40px;
     background-repeat: no-repeat;
     cursor: pointer;
+    margin-left: 16px;
 }
 .cart{
     background-image: url("./image/icon/cart.svg");
@@ -449,7 +449,11 @@ ul{
     }
 }
 @media (max-width: 576px) {
+    .section{
+        height: 240px;
+    }
     .helpYou{
+        line-height: 48px;
         font-size: 16px;
     }
     section .title{
@@ -473,7 +477,11 @@ ul{
     height: 48px;
     padding: 12px 16px;
 }
-
+@media (max-width: 1200px) {
+    .subInput input{
+        width: 62%;
+    }
+}
 .subInput button{
     border-radius: 0px 12px 12px 0px;
 }
@@ -504,11 +512,15 @@ footer p{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 16px;
+}
+.follow > img{
+    margin-left: 16px;
 }
 @media (max-width: 768px) {
     footer .text{
         flex-direction: column;
-        gap: 36px;
+    }
+    footer .text > div{
+        margin-top: 18px;
     }
 }
